--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES6",
     "module": "CommonJS",
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "typeRoots": ["./node_modules/@types", "./src"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
