--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "aadhaar-validator-ts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "The aadhaar-validator npm package provides a simple and efficient utility for validating Aadhaar numbers, the 12-digit unique identification numbers issued by the Indian government",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "src/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
